# weather_scrapper

./: Example.env  README.MB  pyproject.toml  start_scrapper.py  weather_xlsx.py
alembic/: env.py
alembic/versions/: 586d8d2b128f_create_database.py
core/: config.py
database/: connector.py  funcs.py  models.py
database/database_funcs/: weather.py
database/database_funcs/misc/: wrapper.py
logger/: config.py
scrapper/: main.py  scrapper_class.py  validate_data.py
serializers/: database_filters.py
xlsx_scripts/: weather_data.xlsx  xlsx_main.py
